@@ -1,3 +1,7 @@
+2010-01-03  Michal Nazarewicz  <mina86/AT/mina86.com>
+
+	* getlyrics.pl: + incorporated lyrics retrieving code code by Minio
+
 2009-12-12  Michal Nazarewicz  <mina86/AT/mina86.com>
 
 	* installkernel: + --*config is now sysnonym of --config=*config
